Додано метод doDelete. Рефакторинг класу ProfessorRepository та класу з sql шаблонами(text blocks constants). Створений мапер для вхідних/вихідних параметрів http request InputProfessorDto/OutputProfessorDto
